2014-04-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_sax2_element_end_ns):
	Add a CRLF at the end of every P node, as the spec says.

2014-04-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_sax2_element_start_ns):
	Whitespace.

2014-04-17  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_push_attr),
	(gst_ttmlparse_sax2_element_start_ns):
	Make local node attributes override style attributes regardless of
	their parsing order. Previously, whichever attribute was parsed last
	prevailed, which is wrong. We never encountered an example where
	a local attribute had to overwrite a style attribute, but this will be
	more common once we implement regions.

2014-04-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlspan.c: (gst_ttml_span_compose):
	Minor warning fixed.

2014-04-11  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_handle_event):
	Fix GstEvent leaks detected with valgrind and G_SLICE=always-malloc

2014-04-11  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_handle_event):
	Fix caps nego in 1.0 when incoming buffers HAVE caps.

2014-04-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/fluttml.c:
	* src/gstttmlattribute.c:
	* src/gstttmlparse.c: (gst_event_new_new_segment),
	(gst_event_parse_new_segment), (gst_segment_set_newsegment),
	(gst_ttmlparse_gen_buffer), (gst_ttmlparse_handle_buffer),
	(gst_ttmlparse_handle_event), (gst_ttmlparse_chain),
	(gst_ttmlparse_sink_event), (gst_ttmlparse_class_init),
	(gst_ttmlparse_init):
	* src/gstttmltype.c: (gst_ttmltype_init):
	* src/gstttmlutils.c: (gst_ttml_utils_memdump_buffer):
	* src/gstttmlutils.h:
	* testsuite/ttml-play-1.0.bat:
	Port to GStreamer 1.0 API.

2014-04-04  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	* src/Makefile.am:
	A bit of preparation for porting to 1.0 on Linux.

2014-04-03  Xavi Artigas  <xartigas@fluendo.com>
